<resources>
    <string name="app_name">Chronos</string>

    <!--//////////////// Encabezados TabFragments /////////////////////-->
    <string name="tabfragment_alarmas">Alarmas</string>
    <string name="tabfragment_crono">Crono</string>
    <string name="tabfragment_calendario">Calendario</string>
    <string name="title_activity_alarmas">AlarmasActivity</string>

    <!--//////////////// Titulos /////////////////////-->
    <string name="repetir_alarma">Repetir:</string>
    <string name="activar_alarma">Activar:</string>
    <string name="activar_sonido">Sonido:</string>

    <!--//////////////// Alertas /////////////////////-->
    <string name="permiso_storage">Permiso necesario</string>
    <string name="permiso_mensaje">
        Para escoger un sonido, es necesario conceder permiso a la aplicación para acceder a la memoria.
    </string>
    <string name="titulo_permisos">Acceso a la memoria</string>
    <string name="mensaje_permisos">Se necesita conceder permiso para acceder a la memoria</string>
    <string name="ok_permisos">OK</string>
    <string name="cancelar_permisos">Cancelar</string>

    <!--//////////////// TextView & EditText /////////////////////-->
    <string name="description_boton_reloj">Boton reloj</string>
    <string name="fecha_rcv_tv"></string>
    <string name="hora_rcv_tv">00:00</string>
    <string name="lunes_rcv_tv">L</string>
    <string name="martes_rcv_tv">M</string>
    <string name="miercoles_rcv_tv">X</string>
    <string name="jueves_rcv_tv">J</string>
    <string name="viernes_rcv_tv">V</string>
    <string name="sabado_rcv_tv">S</string>
    <string name="domingo_rcv_tv">D</string>
    <string name="tv_ningun_sonido">Ningun sonido</string>
    <string name="tv_place_holder">Place Holder</string>
    <string name="et_dos_puntos">:</string>
    <string name="et_crono">00</string>
    <string name="tv_crono_hora">Horas</string>
    <string name="tv_crono_min">Minutos</string>
    <string name="tv_crono_seg">Segundos</string>
    <string name="tv_crono_cuenta_atras">Cuenta atrás</string>

    <!--//////////////// Botones /////////////////////-->
    <string name="btn_radio_l">L</string>
    <string name="btn_radio_m">M</string>
    <string name="btn_radio_x">X</string>
    <string name="btn_radio_j">J</string>
    <string name="btn_radio_v">V</string>
    <string name="btn_radio_s">S</string>
    <string name="btn_radio_d">D</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="borrar_todas_las_alarmas">Borrar todas las alarmas</string>
    <string name="hh_mm">hh:mm</string>
    <string name="yyy_mm_dd">año/mes/dia</string>
    <string name="sonido_sistema">Sistema</string>
    <string name="acceder_memoria">Memoria</string>

    <!--//////////////// Calendario ///////////////-->
    <string name="material_calendar_monday">L</string>
    <string name="material_calendar_tuesday">M</string>
    <string name="material_calendar_wednesday">X</string>
    <string name="material_calendar_thursday">J</string>
    <string name="material_calendar_friday">V</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <string-array name="material_calendar_day_array">
        <item>L</item>
        <item>M</item>
        <item>X</item>
        <item>J</item>
        <item>V</item>
        <item>S</item>
        <item>D</item>
    </string-array>

    <array name="material_calendar_months_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </array>

    <string name="material_calendar_today_button">Hoy</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancelar</string>

    <!--//////////////// SnackBar y Toast ///////////////-->
    <string name="alarma_borrada">Alarma borrada</string>
    <string name="alarma_creada">Alarma creada</string>
    <string name="no_se_pudo_actualizar">No se pudo actualizar la alarma</string>
    <string name="alarma_actualizada">Alarma actualizada</string>
    <string name="alarma_no_creada">Alarma no creada</string>
    <string name="inserta_un_valor">Inserta un valor</string>
    <string name="alarma_pospuesta">Alarma pospuesta 15 minutos</string>
    <string name="alarma_cancelada">Alarma cancelada</string>
    <string name="permiso_concedido">Permiso concedido</string>
    <string name="permiso_denegado">Permiso denegado</string>
    <string name="error">Error</string>

    <!--//////////////// Notificaciones ///////////////-->
    <string name="canal_notificaciones_alarma">Canal Notificaciones Alarma</string>
    <string name="cancelar">cancelar</string>
    <string name="posponer">posponer</string>
    <string name="titulo_notificacion">Alarma</string>
    <string name="cancelar_cuenta_atras">cancelar cuenta atras</string>
    <string name="cuenta_atras_segundo_plano">Cuenta atras en segundo plano</string>
    <string name="pulsar_para_abrir_app">Pulsa sobre la notificacion para abrir la App</string>
    <string name="tiempo_agotado">Tiempo agotado!!</string>
    <string name="cuenta_atras_finalizado">La cuenta atras ha finalizado</string>
    <string name="eliminadas_todas_alarmas">Eliminadas todas las alarmas</string>
    <string name="notificacion_cancelada">Notificación cancelada</string>


</resources>